<resources>
    <string name="app_name">DocCrypt</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="mail">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="textview">TextView</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="notary">Notary</string>
    <string name="user">User</string>
    <string name="pass_visibility">pass_visibility</string>
    <string name="upload">UPLOAD</string>
    <string name="logo">logo</string>
    <string name="upload_image">Upload image</string>
    <string name="no_files_found">NO FILES FOUND</string>
    <string name="documents">Documents:</string>
    <string name="approved">Approved</string>
    <string name="unapproved">Unapproved</string>
    <string name="_99">99</string>
    <string name="name_surname">Name Surname</string>
    <string name="folder_name">Folder name</string>
    <string name="status_img">status_img</string>
    <string name="folder_img">folder_img</string>
    <string name="doccrypto">DocCrypto</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notification</string>
    <string name="the_document_doc_name_has_been_approved">The document \'Doc name\' has been approved</string>
    <string name="see_document"><![CDATA[> See document]]></string>
    <string name="no_notifications">NO NOTIFICATIONS</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="log_out">LOG OUT</string>
    <string name="upload_doc">Upload document</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="pending_approval">Pending approval</string>
    <string name="user_id">User id</string>
    <string name="personal">Personal</string>
    <string name="public.">PUBLIC</string>
    <string name="doc_name">Doc name</string>
    <string name="document_name">Document name</string>
    <string name="new_folder">new Folder</string>
</resources>