<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".loginActivity.Register">

    <TextView
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account_button"
        style="?attr/materialButtonOutlinedStyle"
        android:theme="@style/Theme.MaterialComponents.Light"
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/create_account"
        android:textColor="#455A64"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763"
        app:strokeColor="@color/white" />

    <RadioGroup
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383">

        <RadioButton
            android:id="@+id/type_user"
            android:layout_width="165dp"
            android:layout_height="70dp"
            android:background="@drawable/border"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/user"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/type_notary"
            android:layout_width="165dp"
            android:layout_height="70dp"
            android:background="@drawable/border"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:text="@string/notary"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/border"
        android:drawableEnd="@drawable/mail"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="104dp"
        android:layout_height="70dp"
        android:background="@android:color/transparent"
        android:text="@string/sign_in"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869" />

    <TextView
        android:layout_width="208dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/already_have_an_account"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:autofillHints="password"
        android:background="@drawable/border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636" />

    <ImageButton
        android:id="@+id/register_password_visibility"
        android:layout_width="48dp"
        android:layout_height="70dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/pass_visibility"
        android:src="@drawable/eye_show"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/border"
        android:drawableEnd="@drawable/person"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258" />

</androidx.constraintlayout.widget.ConstraintLayout>