<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".loginActivity.Login">

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="101dp"
        android:layout_height="62dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/login"
        android:textColor="#455A64"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.757"
        app:strokeColor="@color/white" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:paddingBottom="10dp"
        android:text="@string/register"
        android:textColor="@android:color/darker_gray"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833" />



    <EditText
        android:id="@+id/login_password"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:autofillHints="password"
        android:background="@drawable/border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <ImageButton
        android:id="@+id/login_password_visibility"
        android:layout_width="48dp"
        android:layout_height="70dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/pass_visibility"
        android:src="@drawable/eye_show"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/border"
        android:drawableEnd="@drawable/mail"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.505" />

</androidx.constraintlayout.widget.ConstraintLayout>