<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="#D5D5D5">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="380dp"
        android:layout_height="110dp"
        android:background="@drawable/shadow"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.643">

        <TextView
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:paddingTop="5dp"
            android:text="@string/unapproved"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.762"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.825"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/full_name"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/name_surname"
            android:textColor="#616161"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.312"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.266" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:paddingTop="5dp"
            android:text="@string/approved"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.825"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/approved_count"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:paddingTop="3dp"
            android:text="@string/_99"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.308"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.811"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/unapproved_count"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:paddingTop="3dp"
            android:text="@string/_99"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.929"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.811"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="380dp"
        android:layout_height="600dp"
        android:background="@drawable/shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/doc_recycler"
            android:layout_width="380dp"
            android:layout_height="510dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.677" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:importantForAutofill="no"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="0dp"
            android:text="@string/documents"
            android:textColor="#616161"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.018"
            tools:ignore="LabelFor" />

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="1dp"
            android:background="#616161"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/no_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_files_found"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.287" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>