<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#D5D5D5"
    tools:context=".interfaceActivity.NotaryInterface">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">


        <Button
            android:id="@+id/personal_btn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="#000000"
            android:padding="1dp"
            android:text="@string/personal"
            android:textColor="#CCCCCC"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.466" />

        <Button
            android:id="@+id/public_btn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#CCCCCC"
            android:padding="1dp"
            android:text="@string/public."
            android:textColor="#000000"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/personal_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.466" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:background="@drawable/shadow"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:text="@string/pending_approval"
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.676"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:text="@string/approved"
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.205"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/notary_pending_count"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:paddingTop="5dp"
            android:text="@string/_99"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.693"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/notary_approved_count"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:padding="5dp"
            android:text="@string/_99"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/notary_pending_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.978"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.592"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="372dp"
        android:layout_height="600dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">


        <TextView
            android:id="@+id/notary_no_folders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_files_found"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.242" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notary_folder_recycler"
            android:layout_width="match_parent"
            android:layout_height="570dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.466" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>